--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "build": "tsc -p tsconfig.release.json",
     "build:watch": "tsc -w -p tsconfig.release.json",
     "lint": "eslint . --ext .ts,.tsx",
+    "pretty": "prettier --write \"./**/*.{ts,tsx,js,jsx,json}\"",
     "test": "jest --coverage",
     "test:watch": "jest --watch"
   },
