--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "build:watch": "tsc -w -p tsconfig.release.json",
     "lint": "eslint . --ext .ts,.tsx",
     "pretty": "prettier --write \"./**/*.{ts,tsx,js,jsx,json}\"",
-    "test": "jest --coverage",
+    "test": "TZ=KST jest --coverage",
     "test:watch": "jest --watch"
   },
   "license": "MIT"
