--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "eslint": "~7.21.0",
     "eslint-config-prettier": "~8.1.0",
     "eslint-plugin-jest": "~24.1.5",
+    "fast-check": "^2.17.0",
     "fp-ts": "^2.10.2",
     "jest": "~26.6.3",
     "prettier": "~2.2.1",
